исправил разбил все на модули попровил зависимости

--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,12 @@
 
 	<name>Explore With Me</name>
     <modules>
-        <module>TheFunctionalityOfTheStatisticsService</module>
-    </modules>
+        <module>stats</module>
+		<module>main-service</module>
+		<module>stats/stats-dto</module>
+		<module>stats/stats-client</module>
+		<module>stats/stats-server</module>
+	</modules>
 
     <groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
