поравил многомодульность исправил пум файлы что бы все коректно собиралась отдебыжил весь проект исправил пост мапинг локал дата тайм на стринговый класс и через парсе и форматер все нормально преобразовавалось проверил все тесты проходят на ура все закончил

--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>stats</artifactId>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
