--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
 	<name>Explore With Me</name>
     <modules>
         <module>stats</module>
-		<module>main-service</module>
 		<module>stats/stats-dto</module>
 		<module>stats/stats-client</module>
 		<module>stats/stats-server</module>
-	</modules>
+        <module>main-service</module>
+    </modules>
 
     <groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
@@ -36,11 +36,13 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
