--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,9 @@
 version: '3.8'
 services:
-  main-service:
-    build: /main-service
-    image: service_image
-    container_name: service_container
-    ports:
-      - "8080:8080"
-    depends_on:
-      - stats-server
-      - db
-    environment:
-      - BD=jdbc:postgresql://db:5432/postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=pass
   stats-server:
     build: /stats/stats-server
-    image: service_image
-    container_name: stats-server
+    image: stats-server
+    container_name: stats_server
     ports:
       - "9090:9090"
     depends_on:
@@ -36,3 +23,17 @@ services:
       - POSTGRES_PASSWORD=pass
       - DB_HOST=db
       - DB_PORT=5432
+  main-service:
+    build: /main-service
+    image: main-service
+    container_name: main-service
+    ports:
+      - "8080:8080"
+    depends_on:
+      - stats-server
+      - db
+    environment:
+      - BD=jdbc:postgresql://db:5432/postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=pass
+
